generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Authentication
model User {
  id        String   @id @default(uuid())
  email     String   @unique
  username  String
  password  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  authSessions          AuthSession[]
  moodEntries           MoodEntry[]
  transactions          Transaction[]
  recurringTransactions RecurringTransaction[]

  @@map("users")
}

model AuthSession {
  token     String    @default(uuid())
  userId    String
  agent     String
  createdAt DateTime  @default(now())
  expiresAt DateTime
  revokedAt DateTime?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id(name: "key", fields: [token, userId])
  @@map("auth_sessions")
}

// Mood tracking
model MoodEntry {
  id        String   @id @default(uuid())
  userId    String
  mood      Int
  note      String?
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("mood_entries")
}

// Finances
enum TransactionType {
  expense
  income
}

enum TransactionFrequency {
  monthly
  yearly
}

model Transaction {
  id          String          @id @default(uuid())
  userId      String
  type        TransactionType
  label       String
  amount      Float
  date        DateTime        @db.Date
  note        String?
  recurringId String?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  user                 User                  @relation(fields: [userId], references: [id], onDelete: Cascade)
  recurringTransaction RecurringTransaction? @relation(fields: [recurringId], references: [id], onDelete: SetNull)

  @@map("transactions")
}

model RecurringTransaction {
  id          String               @id @default(uuid())
  userId      String
  type        TransactionType
  label       String
  amount      Float
  startDate   DateTime             @db.Date
  endDate     DateTime?            @db.Date
  nextDueDate DateTime             @db.Date
  frequency   TransactionFrequency
  note        String?
  active      Boolean              @default(true)
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt

  transactions Transaction[]

  use User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("recurring_transactions")
}
